--- a/src/build.less
+++ b/src/build.less
@@ -1,3 +1,3 @@
-@import "../../bootstrap_3_3_6/less/variables.less";
-@import "../../bootstrap_3_3_6/less/mixins.less";
+@import "../bootstrap/less/variables.less";
+@import "../bootstrap/less/mixins.less";
 @import "angular-ui-notification.less";
